2006-11-04 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/TextThought.py:
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/prefs.py:
	* src/labyrinth.py:
	* src/Makefile.am:
	Catch (temporarily) im_context signals and dump to terminal
	Add prefs.py to calculate / store preferences
	Add RTL mode when in a RTL environment -
	right edge anchored and edit sign displayed in
	top right corner
	Mixing RTL and LTR doesn't work so well yet.

	* src/MainWindow.py:
	Fix creation of new maps - MapNumber wasn't referenced
	properly

	* src/DrawingThought.py:
	* src/utils.py:
	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/Links.py:
	* src/Browser.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* data/labyrinth-ui.xml:
	Merge of "Rework" branch.
	Architecture rework of MMapArea and Thoughts
	Fixes (hopefully) many problems encountered thus far
	In addition, new features that have fallen out:
	- Kill Move mode.
	 - In edit mode, single click selects
	 - Single click + drag moves
	 - Double click edits
	 - Single click with ctrl drags a link
	- Multiple selection of thoughts is now possible
	  using shift and ctrl keys
	 - When multiple thoughts selected, extended buffer
	   clears and becomes insensitive
	- Don't recalculate every text thought's text every
	  redraw.  Reduces CPU load significantly
	- Cursor changes happen on mouse-over
	- More cursor changes than you can shake a stick at
	- Middle clicking pastes primary selection text when possible
	- Thought heirarchy goes by selection order.  Thoughts selected
	  more recently appear in front of thought that appear less recently
	- Framework in place for popup menus (though none appear yet)
	- Framework in place to select links (though not done yet)
	Bug fixes included are:
	- Don't "jerk" thoughts around when moving.  Moving is much
	  smoother now (#19)
	- Escape key finishes editing a thought (#23)
	- Backspace at the start of text kills things.  Delete at end of
	  text ditto (#25)